hphp/test/slow/like_types/like_casts_bad.php.expectf
Fatal error: Invalid expression in constant initializer in %s/test/slow/like_types/like_casts_bad.php on line 3